--- a/CSS/Resume/style.css
+++ b/CSS/Resume/style.css
@@ -18,11 +18,14 @@ body {
 
     header {
         min-height: 20vh;
-        padding: 30px 20px 20px 20px;
+        padding: 30px 20px 10px 20px;
     }
 
         header img {
             width: 200px;
+            height: 150px;
+            object-fit: cover;
+            object-position: right;
             display: inline-block;
             margin-right: 25px;
         }
