--- a/CSS/Can I Use/style.css
+++ b/CSS/Can I Use/style.css
@@ -21,7 +21,7 @@ nav .home_section,
 nav .about_section {
   display: inline-block;
   width: 49.8%;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 nav .about_section {
   text-align: right;
@@ -51,16 +51,16 @@ nav a {
   text-align: center;
 }
 main {
-  padding: 0.1em 1.3em;
+  padding: 0.1em 1.3em 2.7em 1.3em;
   background-color: #f2e9d6;
-  margin-top: 30px;
+  margin-top: 38px;
   position: relative;
 }
 main #hashtag {
   position: absolute;
   top: 26px;
-  left: -33.5px;
-  padding: 0.1em 0.3em;
+  left: -43.8px;
+  padding: 0.3em 0.5em;
   background-color: #c84f00;
   font-weight: 400;
   font-size: 1.7em;
@@ -71,6 +71,7 @@ main h1 {
 }
 main h1 {
   margin-bottom: 28px;
+  font-size: 2.4rem;
 }
 main p {
   width: 52ch;
@@ -81,12 +82,13 @@ main p {
 }
 main .head_title {
   padding: 0 1em;
+  margin-top: 1.4rem;
 }
 main .head_title li {
   color: #000;
   display: inline-block;
   width: 5.8rem;
-  padding: 0.8em 0.5em;
+  padding: 1em 0.5em;
   text-align: center;
   font-weight: 400;
   margin-right: 0.1em;
@@ -99,7 +101,7 @@ main .boxes {
 main .boxes li {
   display: inline-block;
   width: 5.8rem;
-  padding: 0.8em 0.5em;
+  padding: 0.9em 0.5em;
   text-align: center;
   font-weight: 500;
   margin: 0 0.1em 0.35em 0;
