--- a/CSS/Can I Use/style.less
+++ b/CSS/Can I Use/style.less
@@ -20,7 +20,7 @@ nav {
     .about_section {
         display: inline-block;
         width: 49.8%;
-        margin-bottom: 30px;
+        margin-bottom: 25px;
     }
     .about_section {
         text-align: right;
@@ -51,15 +51,15 @@ nav {
     }
 }
 main {
-    padding: 0.1em 1.3em;
+    padding: 0.1em 1.3em 2.7em 1.3em;
     background-color: #f2e9d6;
-    margin-top: 30px;
+    margin-top: 38px;
     position: relative;
     #hashtag {
         position: absolute;
         top: 26px;
-        left: -33.5px;
-        padding: 0.1em 0.3em;
+        left: -43.8px;
+        padding: 0.3em 0.5em;
         background-color: #c84f00;
         font-weight: 400;
         font-size: 1.7em;
@@ -70,6 +70,7 @@ main {
     }
     h1 {
         margin-bottom: 28px;
+        font-size: 2.4rem;
     }
     p {
         width: 52ch;
@@ -80,11 +81,12 @@ main {
     }
     .head_title {
         padding: 0 1em;
+        margin-top: 1.4rem;
         li {
             color: #000;
             display: inline-block;
             width: 5.8rem;
-            padding: 0.8em 0.5em;
+            padding: 1em 0.5em;
             text-align: center;
             font-weight: 400;
             margin-right: 0.1em;
@@ -97,7 +99,7 @@ main {
         li {
             display: inline-block;
             width: 5.8rem;
-            padding: 0.8em 0.5em;
+            padding: 0.9em 0.5em;
             text-align: center;
             font-weight: 500;
             margin: 0 0.1em 0.35em 0;
