--- a/CSS/(RWD)Resume/style.css
+++ b/CSS/(RWD)Resume/style.css
@@ -3,141 +3,324 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     background-color: black;
 }
-
 .container {
     background-color: #e1eafc;
-    background-image: radial-gradient(circle, #ffffff, #fdfdfe, #fafafc, #f7f8fb, #f4f6fa, #eff2f7, #e9edf3, #e4e9f0, #dbe2ea, #d3dbe5, #cad4df, #c1cdd9);
+    background-image: radial-gradient(
+        circle,
+        #ffffff,
+        #fdfdfe,
+        #fafafc,
+        #f7f8fb,
+        #f4f6fa,
+        #eff2f7,
+        #e9edf3,
+        #e4e9f0,
+        #dbe2ea,
+        #d3dbe5,
+        #cad4df,
+        #c1cdd9
+    );
     max-width: 700px;
     min-height: 100vh;
     margin: 0 auto;
 }
-
-    header {
-        min-height: 20vh;
-        padding: 30px 20px 10px 20px;
-    }
-
-        header img {
-            width: 200px;
-            height: 150px;
-            object-fit: cover;
-            object-position: right;
-            display: inline-block;
-            margin-right: 25px;
-        }
-
-        header .name {
-            display: inline-block;
-            vertical-align: top;
-        }
-
-            header .name h1 {
-                letter-spacing: 5px;
-                font-size: 40px;
-                margin-bottom: 5px;
-                color: #2d4767;
-            }
-
-            header .name h5 {
-                letter-spacing: 2.5px;
-            }
-
-            header .name p {
-                margin-top: 25px;
-                border-top: 2px solid #2d4767;
-            }
-
-            header .name span {
-                font-size: 40px;
-            }
-
-    main {
-        min-height: 60vh;
-    }
-
-        main .aboutMe {
-            background-color: #e5e5e5;
-            padding: 20px 25px;
-            margin: 0 20px;
-        }
-
-            main .aboutMe h3 {
-                text-align: center;
-                letter-spacing: 2.5px;
-            }
-
-            main .aboutMe p {
-                font-size: 17px;
-                line-height: 1.4;
-                text-align: justify;
-                margin-top: 15px;
-            }
-        
-        main .skills {
-            margin: 0 10px;
-        }
-
-            main .skills .technologies, main .skills .projects {
-                display: inline-block;
-                width: 49%;
-            }
-
-            main .skills .technologies {
-                vertical-align: top;
-                margin-top: 10px;
-            }
-
-                main .skills .technologies h3 {
-                    text-align: center;
-                    letter-spacing: 2.5px;
-                    padding-top: 20px;
-                }
-
-                main .skills .technologies .techImages {
-                    padding: 20px;
-                    vertical-align: top;
-                }
-                
-                    main .skills .technologies img {
-                        width: 50px;
-                        margin: 2px;
-                    }
-
-            main .skills .projects {
-                background-color: #a3a3a3;
-                background-image: radial-gradient(circle, #f4f4f4, #f6f6f6, #f8f8f8, #fafafa, #fcfcfc, #f8f8f8, #f4f4f4, #f0f0f0, #e5e5e5, #d9d9d9, #cecece, #c3c3c3);
-                padding: 15px 13px 0 25px;
-                margin-top: 20px;
-            }
-
-                main .skills .projects h3 {
-                    text-align: center;
-                    letter-spacing: 2.5px;
-                    margin-bottom: 25px;
-                }
-                
-                main .skills .projects ul {
-                    padding-left: 15px;
-                    margin-bottom: 15px;
-                }
-
-    footer {
+header {
+    min-height: 20vh;
+    padding: 30px 20px 10px 20px;
+}
+header img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    object-position: 70% 50%;
+    display: inline-block;
+    margin-right: 25px;
+}
+header .name {
+    display: inline-block;
+    vertical-align: top;
+}
+header .name h1 {
+    letter-spacing: 5px;
+    font-size: 40px;
+    margin-bottom: 5px;
+    color: #2d4767;
+}
+header .name h5 {
+    letter-spacing: 2.5px;
+    padding-bottom: 2.5em;
+    border-bottom: 2px solid #2d4767;
+}
+header .name p {
+    margin-bottom: 1rem;
+    margin-top: 0.3rem;
+}
+header .name span {
+    font-size: 40px;
+}
+main {
+    min-height: 60vh;
+}
+main .aboutMe {
+    background-color: #e5e5e5;
+    padding: 20px 25px;
+    margin: 0 20px;
+}
+main .aboutMe h3 {
+    text-align: center;
+    letter-spacing: 2.5px;
+}
+main .aboutMe p {
+    font-size: 17px;
+    line-height: 1.4;
+    text-align: justify;
+    margin-top: 15px;
+}
+main .skills {
+    margin: 0 10px;
+}
+main .skills .technologies,
+main .skills .projects {
+    display: inline-block;
+    width: 49%;
+}
+main .skills .technologies {
+    vertical-align: top;
+    margin-top: 10px;
+}
+main .skills .technologies h3 {
+    text-align: center;
+    letter-spacing: 2.5px;
+    padding-top: 20px;
+}
+main .skills .technologies .techImages {
+    padding: 20px;
+    vertical-align: top;
+}
+main .skills .technologies img {
+    width: 50px;
+    margin: 2px;
+}
+main .skills .projects {
+    background-color: #a3a3a3;
+    background-image: radial-gradient(
+        circle,
+        #f4f4f4,
+        #f6f6f6,
+        #f8f8f8,
+        #fafafa,
+        #fcfcfc,
+        #f8f8f8,
+        #f4f4f4,
+        #f0f0f0,
+        #e5e5e5,
+        #d9d9d9,
+        #cecece,
+        #c3c3c3
+    );
+    padding: 15px 13px 0 25px;
+    margin-top: 20px;
+}
+main .skills .projects h3 {
+    text-align: center;
+    letter-spacing: 2.5px;
+    margin-bottom: 25px;
+}
+main .skills .projects ul {
+    padding-left: 15px;
+    margin-bottom: 15px;
+}
+footer {
+    text-align: center;
+    margin-top: 25px;
+    padding-bottom: 12px;
+}
+footer a {
+    padding: 0 3px;
+    color: black;
+}
+footer img {
+    width: 20px;
+    vertical-align: bottom;
+    margin-right: 2px;
+}
+/* Media Queries */
+@media only screen and (max-width: 1024px) {
+    .container {
         text-align: center;
-        margin-top: 25px;
-        padding-bottom: 12px;
+        header {
+            padding: 5em 5em 2em 5em;
+            img {
+                width: 100%;
+                margin: 0;
+                height: 25rem;
+                object-fit: cover;
+            }
+            .name {
+                display: block;
+                width: 100%;
+                h1 {
+                    letter-spacing: 0.3em;
+                    font-size: 2.8rem;
+                    margin-bottom: 0.5em;
+                }
+                h5 {
+                    letter-spacing: 0.1em;
+                    line-height: 1.4;
+                    font-size: 1.6rem;
+                    padding: 0.5em 2em 1.2em 2em;
+                    margin-bottom: 2rem;
+                }
+                p {
+                    font-size: 1.8rem;
+                    width: 50%;
+                    margin: 0 auto;
+                    span {
+                        display: none;
+                    }
+                }
+            }
+        }
+        main {
+            padding: 2em;
+            .aboutMe {
+                padding: 2.5rem 1.5rem;
+                h3 {
+                    font-size: 2rem;
+                }
+                p {
+                    font-size: 2rem;
+                    padding: 1.5rem;
+                }
+            }
+            .technologies,
+            .projects {
+                display: block;
+                width: 100%;
+            }
+            .technologies h3 {
+                font-size: 2rem;
+                margin: 3rem 0;
+            }
+            .technologies .techImages {
+                padding: 1em 4em;
+                img {
+                    width: 7rem;
+                }
+            }
+            .projects {
+                margin-top: 3rem;
+                padding: 2.5rem 1.5rem;
+                h3 {
+                    font-size: 2.5rem;
+                }
+                h5,
+                p,
+                ul li {
+                    font-size: 2rem;
+                    padding: 0.4em;
+                }
+                ul li {
+                    list-style: none;
+                }
+            }
+        }
+        footer {
+            padding: 1.5rem;
+            a {
+                font-size: 3rem;
+                display: block;
+                margin: 2rem 0;
+            }
+            img {
+                width: 4rem;
+            }
+        }
     }
-
-        footer a {
-            padding: 0 3px;
-            color: black;
+}
+@media only screen and (max-width: 480px) {
+    .container {
+        header {
+            padding: 0;
+            img {
+                padding-top: 1em;
+                width: 90%;
+                margin: 0;
+                height: 15rem;
+            }
+            .name {
+                display: block;
+                width: 100%;
+                h1 {
+                    letter-spacing: 0.3em;
+                    font-size: 2.8rem;
+                    margin-bottom: 0.5em;
+                }
+                h5 {
+                    padding: 0.5em 0.2em 1.2em 0.2em;
+                }
+                p {
+                    font-size: 1.4rem;
+                }
+            }
         }
-
-        footer img {
-            width: 20px;
-            vertical-align: bottom;
-            margin-right: 2px;
+        main {
+            padding: 0;
+            margin: 0;
+            .aboutMe {
+                padding: 1.8em 1.3em;
+                margin: 4em 0 0 0;
+                h3 {
+                    font-size: 1.7rem;
+                    width: 80%;
+                    margin: 0 auto;
+                }
+                p {
+                    font-size: 1.6rem;
+                    padding: 1.5rem;
+                }
+            }
+            .skills {
+                margin: 0;
+                .technologies h3 {
+                    font-size: 1.7rem;
+                    margin: 2.5rem 0;
+                }
+                .technologies .techImages {
+                    padding: 0.6em 3em;
+                    img {
+                        width: 8rem;
+                        margin: 0.4em;
+                    }
+                }
+                .projects {
+                    margin: 2.5rem 0 0 0;
+                    padding: 1.8em 1.3em;
+                    h3 {
+                        font-size: 1.8rem;
+                    }
+                    h5 {
+                        font-size: 1.4rem;
+                    }
+                    p,
+                    ul li {
+                        font-size: 1.6rem;
+                    }
+                }
+            }
         }
+        footer {
+            padding: 1rem;
+            a {
+                font-size: 2rem;
+                margin: 1.5rem 0;
+            }
+            img {
+                width: 3rem;
+            }
+        }
+    }
+}
